--- a/LucidDreams/Base.lproj/Main.storyboard
+++ b/LucidDreams/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DRi-Oh-NiT" id="gue-fC-g8x">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="77.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -59,13 +59,13 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pt2-dN-6NG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1694" y="758"/>
+            <point key="canvasLocation" x="878" y="908"/>
         </scene>
         <!--Dream Detail View Controller-->
         <scene sceneID="9WO-Wo-qZt">
             <objects>
                 <collectionViewController id="P5k-S2-HW1" customClass="DreamDetailViewController" customModule="LucidDreams" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" id="oLl-qX-igg">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="oLl-qX-igg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -168,21 +168,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bgH-xl-YvB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-119.2" y="65.217391304347828"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="jMZ-A0-X6g">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8ia-hQ-pSL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kUL-Oh-xxM" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ScD-Ou-3If">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="820" y="757.87106446776613"/>
         </scene>
     </scenes>
 </document>
